--- a/index.css
+++ b/index.css
@@ -1,3 +1,26 @@
 body {
-    background-color: orange;
+    background-color: deepskyblue;
+}
+
+.Main {
+    outline: 2px solid white;
+    width: 60%;
+    position: absolute;
+    left: 20%;
+    margin-top: 2%;
+}
+
+.Menu {
+    outline: 2px solid white;
+    width: 10%;
+    position: absolute;
+}
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: justify;
+    margin: 5%;
 }
