--- a/index.css
+++ b/index.css
@@ -31,13 +31,14 @@ h2 {
 p {
     text-align: justify;
     margin: 5%;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 a {
     color: white;
     margin: 5%;
-}
+    font-weight: bolder;
+    text-decoration: none;
 }
 a:visited {
     color: deepskyblue;
