--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color: black;
     color: white;
     font-family: monospace;
 }
@@ -29,6 +29,22 @@ img {
     height: 85%;
 }
 
+.Game_Ad {
+    outline: 2px solid white;
+    width: 15%;
+    position: absolute;
+    right: 2.5%;
+    margin-top: 3%;
+    height: 85%;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    cursor: crosshair;
+	display: block;
+}
+
 h1 {
     text-align: center;
 }
@@ -42,6 +58,7 @@ p {
     margin: 5%;
     margin-top: 0%;
     font-weight: bolder;
+    line-height: 200%;
 }
 
 a {
