--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ img {
     left: 20%;
     margin-top: 2%;
     height: 90%;
+    overflow: auto;
 }
 
 .Menu {
@@ -38,6 +39,14 @@ img {
     height: 85%;
 }
 
+.Smaller-IMG {
+    width: 25%;
+    float: left;
+    margin: 5%;
+    margin-top: 1%;
+    margin-right: 3%;
+}
+
 canvas {
     width: 100%;
     height: 100%;
@@ -51,6 +60,7 @@ h1 {
 
 h2 {
     margin-left: 5%;
+    clear: left;
 }
 
 p {
