--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -7,10 +7,6 @@ header {
     background-color: #4D5C7A;
 }
 
-nav {
-    height: 2;
-}
-
 nav ul {
     margin: 0%;
     list-style: none;
@@ -19,10 +15,11 @@ nav ul {
 nav li {
     display: inline-block;
     margin-left: 5%;
-    padding: 2.8%;
+    padding: 3%;
 }
 
 .logo {
     float: left;
-    padding: 0.5%;
+    padding: 1%;
+    width: 5%;
 }
