--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -5,6 +5,9 @@ body {
 
 header {
     background-color: #694B7A;
+    position: relative;
+    left: 2.5%;
+    width: 95%;
 }
 
 nav ul {
@@ -14,10 +17,11 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 5%;
-    padding: 3%;
-    
+    padding: 2%;
+    background-color: #513463;
+    border: 14px solid #694B7A;
 }
+
 
 nav a {
     text-decoration: none;
@@ -26,8 +30,20 @@ nav a {
     text-transform: uppercase;
 }
 
+nav li:hover {
+    background-color: #3F2051;
+}
+
 .logo {
     float: left;
     padding: 1%;
-    width: 5%;
+    width: 5.2%;
+}
+
+.main {
+    width: 80%;
+    background-color: #707C95;
+    position: fixed;
+    margin-top: 1%;
+    left: 10%;
 }
