--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -37,26 +37,33 @@ nav li:hover {
 h1 {
     margin: 5%;
     color: #2B0F3C;
+    margin-top: 3%;
+    margin-bottom: 2%;
 }
 
 .logo {
     float: left;
-    padding: 1%;
-    width: 5.2%;
+    padding: 2%;
+    height: 45px;
     border-radius: 28px;
 }
 
 .main {
     width: 80%;
+    height: 80%;
     left: 10%;
     background-color: #707C95;
     position: fixed;
     margin-top: 1%;
     border-radius: 14px;
+    overflow: auto;
 }
 
 .main img {
     border-radius: 14px;
-    width: 90%;
-    left: ;
+    width: 50%;
+    margin: 5%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    float: right;
 }
