--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -7,6 +7,8 @@ header {
     background-color: #694B7A;
     position: relative;
     border-radius: 14px;
+    width: 95%;
+    left: 2.5%;
 }
 
 nav ul {
@@ -50,8 +52,7 @@ h1 {
 
 .main {
     width: 80%;
-    height: 80%;
-    left: 10%;
+    left: 3%;
     background-color: #707C95;
     position: fixed;
     margin-top: 1%;
