--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -5,11 +5,18 @@ body {
     overflow: auto;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1920px) {
 
     header {
         background-color: #294A92;
-        width: 1366px;
+        width: 100%;
+    }
+
+    .dropbtn {
+        position: fixed;
+        height: 0;
+        font-size: 0;
+        visibility: hidden;
     }
 
     p {
@@ -51,14 +58,14 @@ body {
     nav a {
         text-decoration: none;
         color: #09245D;
-        border: 28px solid #425F9E;
+        border: 29px solid #425F9E;
         background-color: #425F9E;
         border-radius: 12.5px;
     }
 
     nav a:hover {
         color: #09245D;
-        border: 28px solid #6680B7;
+        border: 29px solid #6680B7;
         background-color: #6680B7;
     }
 
@@ -67,7 +74,7 @@ body {
         text-decoration: none;
         font-weight: bold;
         text-transform: uppercase;
-        border: 28px solid #294A92;
+        border: 29px solid #294A92;
         border-radius: 12.5px;
         margin: 12.5px;
         border-right: 0;
@@ -76,25 +83,83 @@ body {
 }
 /* Tablet Landscape */
 @media screen and (max-width: 1060px) {
-    
-}
-
-/* Tabled Portrait */
-@media screen and (max-width: 768px) {
-
-}
-
-/* iPhone 5 Landscape */
-@media screen and (max-width: 568px) {
-
-}
-
-/* iPhone 5 Portrait */
-@media screen and (max-width: 320px) {
     header {
-        width: 100%;
+    width: 100%;
+    overflow: visible;
     }
+
     .main {
-        width: 100%;
+    width: 100%;
+    left: 0;
     }
+
+    .main h1 {
+    margin-top: 0;
+    }
+
+    .logo {
+    width: 50px;
+    border-radius: 14;
+    padding: 13px;
+    }
+
+    nav a {
+    border: 12px solid #425F9E;
+    border-radius: 0;
+    text-decoration: none;
+    display: block;
+    }
+
+    nav a:hover {
+    border: 12px solid #6680B7;
+    border-radius: 0;
+    }
+
+    nav li {
+    border: 0px solid #6680B7;
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+    margin: 0;
+    font-size: small;
+    width: 100%;
+    }
+
+    /* Dropdown Button */
+.dropbtn {
+    position: relative;
+    margin: 12.5px;
+    border-radius: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: #689F39;
+    color: #425F9E;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    visibility: visible;
+    width: 200px;
+    height: auto;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    /*position: relative;*/
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  nav {
+    display: none;
+    position: absolute;
+    max-width: 223px;
+    text-align: center;
+    z-index: 1;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover nav {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
 }
