--- a/Criminal-Psychology/Cooper&Mackie.css
+++ b/Criminal-Psychology/Cooper&Mackie.css
@@ -132,8 +132,8 @@ body {
     border-radius: 14px;
     font-weight: bold;
     text-transform: uppercase;
-    background-color: #689F39;
-    color: #425F9E;
+    background-color: #7A3D9E !important;
+    color: #521377;
     padding: 16px;
     font-size: 16px;
     border: none;
